<resources>
    <string name="app_name">FamilyTraval</string>
    <string name="bs_ripple">BS_RIPPLE</string>
    <string name="_3_items">3 items</string>
    <string name="_4_items">4 items</string>
    <string name="_5_items">5 items</string>
    <string name="auto_hide_badge">Auto hide badge</string>
    <string name="toggle_hide">Toggle Hide</string>
    <string name="toggle_badge">Toggle Badge</string>
    <!-- 商城主界面相关字符串 -->
    <string name="tab_item_home">商城</string>
    <string name="tab_item_category">分类</string>
    <string name="tab_item_shopcart">购物车</string>
    <string name="tab_item_mine">我的</string>

    <string name="text_item_category">消息中心</string>
    <string name="text_item_shopcatd">购物车</string>
    <string name="text_item_order">浏览记录</string>
    <string name="text_item_coupon">优惠券</string>
    <!-- 我的 -->
    <string name="person_nickname">点击此处登录</string>
    <string name="person_mine_order">我的订单</string>
    <string name="person_all_order">查看全部订单</string>
    <string name="person_order_waitpay">待付款</string>
    <string name="person_order_waitreceive">待收货</string>
    <string name="person_order_waitcomment">待评价</string>
    <string name="person_order_returned">退/换货</string>
    <string name="person_order_canceled">已取消</string>
    <string name="person_goods_collect">我的收藏</string>
    <string name="person_receive_address">收货地址</string>
    <string name="person_user_info">个人资料</string>
    <string name="person_integrate_detail">积分明细</string>
    <string name="person_coupon">优惠券</string>
    <string name="select_city">选择城市</string>
    <string name="hot_city">热门城市</string>
    <string name="located_city">定位城市</string>
    <string name="hint_search_box">请输入城市名或拼音</string>
    <string name="nothing_found">没有搜索结果~</string>
    <string name="locating">正在定位…</string>
    <string name="located_failed">定位失败</string>

    <string name="home_title_scan">扫扫</string>
    <string name="home_title_msg">消息</string>
    <string name="title_coupon">优惠券</string>
    <string name="title_goods_comment">商品评论</string>
    <string name="title_apply_exchnage">申请售后</string>
    <string name="title_exchange_detail">售后详情</string>
    <string name="title_product_spec">商品规格</string>

    <string name="title_shopcart">购物车</string>
    <string name="title_category">分类</string>

    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="scan_back">返回</string>
    <string name="scan_title">二维码扫描</string>
    <!-- 产品列表 -->
    <string name="product_price">¥%1$2.2f</string>
    <string name="sort_composite">综合</string>
    <string name="sort_salenum">销量</string>
    <string name="sort_price">价格</string>
    <string name="sort_filter">筛选</string>
    <string name="hint_search">请输入要搜索的商品</string>
    <string name="hint_comment">请输入评价</string>
    <!-- 公共字符串 -->
    <string name="count">数量</string>
    <string name="comment">评论</string>
    <string name="image_text_detail">图文详情</string>
    <string name="order_pay">去结算</string>
    <string name="coupon">优惠券</string>
    <string name="use">使用</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="settings">设置</string>
    <string name="exit">安全退出</string>
    <string name="province">省</string>
    <string name="city">市</string>
    <string name="district">区</string>
    <string name="town">镇</string>
    <string name="delete">删除</string>
    <string name="delete_history">删除历史记录</string>
    <string name="search_history">搜索历史</string>
    <string name="hot_search">热搜</string>
    <string name="apply_return">申请售后</string>
    <string name="apply_comment">去评价</string>
    <string name="submit_comment">提交评论</string>
    <string name="scan">扫一扫</string>
    <!-- 通用提示语  -->
    <string name="data_error">数据异常</string>
    <string name="toast_collect_success">成功收藏</string>
    <string name="toast_collect_cancel">取消收藏</string>
    <string name="toast_not_datal">请选择商品数量</string>
    <string name="toast_shopcart_action_success">购物车操作成功</string>
    <string name="toast_count_not_small_zero">"数量不能少于0"</string>
    <string name="toast_low_stocks">库存不足</string>
    <string name="toast_load_data">正在加载数据</string>
    <string name="toast_person_unlogin">请先登录</string>
    <string name="toast_address_nocompletion">地址信息不完整</string>
    <!-- 产品列表 -> 产品详情 -->
    <string name="product_details_spec">产品规格</string>
    <string name="product_details_attr">商品属性</string>
    <string name="product_details_detail">详情</string>
    <string name="product_details_comment">累计评价</string>
    <string name="product_details_like">已收藏</string>
    <string name="product_details_unlike">未收藏</string>
    <string name="product_add_cart">加入购物车</string>
    <string name="product_buy_now">立即购买</string>
    <string name="digate_1">12</string>
    <string name="title_spec">规格属性</string>
    <string name="title_product_detail">商品详情</string>
    <string name="title_consignee_list">收货人地址</string>
    <string name="title_collect">收藏</string>
    <string name="title_balance_points">积分金额明细</string>
    <string name="title_confirm_order">确认订单</string>
    <string name="title_product_list">商品列表</string>
    <string name="title_pay_completed">支付完成</string>
    <string name="title_pay_list">支付列表</string>
    <string name="title_logistic">物流</string>
    <string name="title_getcontent">获取内容</string>
    <string name="title_detail">订单详情</string>
    <string name="title_exchange_list">退换货列表</string>
    <string name="title_consignee">收货地址</string>
    <string name="title_home">TPshop商城</string>
    <string name="toast_no_select_province">请先选择省份</string>
    <string name="toast_no_select_city">请先选择城市</string>
    <string name="toast_no_select_district">请先选择区县</string>
    <string name="toast_no_preview_district">请选择上级地区</string>
    <string name="toast_next_version">该版本为公测版,下版本开放该功能</string>
</resources>
