<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/detail_scrollv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_activity"
            android:orientation="vertical">

            <!-- 产品图片 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="300dip"
                android:background="@color/bg_view">

                <com.familytraval.ui.SPPageView
                    android:id="@+id/banner_slayout"
                    android:layout_width="match_parent"
                    android:layout_height="300dip"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/margin_space"
                    android:scrollbars="none">

                    <LinearLayout
                        android:id="@+id/banner_lyaout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:orientation="horizontal"></LinearLayout>
                </com.familytraval.ui.SPPageView>

                <TextView
                    android:id="@+id/pageindex_txtv"
                    android:layout_width="50dip"
                    android:layout_height="50dip"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="@dimen/margin_space"
                    android:layout_marginRight="@dimen/margin_space"
                    android:background="@drawable/product_detail_pageindex"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="0/0"
                    android:textColor="@color/white" />
            </RelativeLayout>

            <View style="@style/separator_line" />

            <!-- 产品名称 -->
            <TextView
                android:id="@+id/details_name_txtv"
                style="@style/textStyle.Normal.black"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_text"
                android:layout_marginLeft="@dimen/margin_space"
                android:gravity="left|center_vertical"
                android:maxLines="2"
                android:text="荣耀 畅玩46"
                android:textStyle="bold" />

            <!-- 关键词 -->
            <TextView
                android:id="@+id/details_keywords_txtv"
                style="@style/textStyle.Normal.black"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_text"
                android:layout_marginLeft="@dimen/margin_space"
                android:gravity="left|center_vertical"
                android:maxLines="2"
                android:text="LG 3g 876 支持 双模 2008年04月 灰色 GSM,850,900,1800,1900" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dip"
                android:background="@color/bg_view">

                <!-- 现价 -->
                <TextView
                    android:id="@+id/details_now_price_txtv"
                    style="@style/textStyle.Big.lightRed"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height_text"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin_space"
                    android:gravity="left|center_vertical"
                    android:text="现价: ￥90.00" />

                <!-- 原价 -->
                <TextView
                    android:id="@+id/details_orignal_price_txtv"
                    style="@style/textStyle.Normal.subTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height_text"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin_space"
                    android:layout_toRightOf="@id/details_now_price_txtv"
                    android:gravity="left|center_vertical"
                    android:text="原价: ￥100.00" />


            </RelativeLayout>

            <com.familytraval.ui.ArrowRowView
                android:id="@+id/product_spec_aview"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_row"
                android:clickable="true"
                android:focusable="true"
                custom:titleText="@string/product_details_spec" />

            <View style="@style/separator_line" />

            <!-- 产品规格-->

            <View style="@style/separator_line" />

            <!-- 基本属性 -->
            <com.familytraval.ui.ArrowRowView
                android:id="@+id/product_attr_aview"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_row"
                android:clickable="true"
                android:focusable="true"
                custom:titleText="@string/product_details_attr" />

            <View style="@style/separator_line" />

            <!-- 商品详情 -->
            <com.familytraval.ui.ArrowRowView
                android:id="@+id/product_detail_aview"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_row"
                android:clickable="true"
                android:focusable="true"
                custom:titleText="@string/product_details_detail" />

            <View style="@style/separator_line" />

            <!-- 商品评论 -->
            <com.familytraval.ui.ArrowRowView
                android:id="@+id/product_comment_aview"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_row"
                android:clickable="true"
                android:focusable="true"
                custom:titleText="@string/product_details_comment" />

            <View style="@style/separator_line" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dip" />

            <View style="@style/separator_line" />

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_alignParentBottom="true"
        android:layout_weight="1.0"
        android:background="@color/black">

        <LinearLayout
            android:id="@+id/like_lyaout"
            android:layout_width="80dip"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/product_like_imgv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/product_unlike" />

            <TextView
                android:id="@+id/product_like_txtv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/product_details_unlike"
                android:textSize="@dimen/font_size_small" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/product_cart_rlayout"
            android:layout_width="80dip"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/product_cart_imgv"
                android:layout_width="22dip"
                android:layout_height="22dip"
                android:layout_centerHorizontal="true"
                android:src="@drawable/product_cart" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/product_cart_imgv"
                android:gravity="center_horizontal"
                android:text="@string/tab_item_shopcart"
                android:textSize="@dimen/font_size_small" />

            <TextView
                android:id="@+id/productcart_count"
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:layout_alignParentTop="true"
                android:layout_below="@id/product_cart_imgv"
                android:layout_toRightOf="@+id/product_cart_imgv"
                android:background="@drawable/product_cart_count_bg"
                android:gravity="center_horizontal|top"
                android:text="@string/digate_1"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_small"
                android:visibility="gone" />
        </RelativeLayout>

        <Button
            android:id="@+id/product_cart_btn"
            android:layout_width="120dip"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_selector"
            android:text="@string/product_add_cart"
            android:textColor="@color/white" />
    </RelativeLayout>
</RelativeLayout>

