<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_view"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/product_info_layout"
        android:layout_width="match_parent"
        android:layout_height="70dip"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/margin_space"
        android:layout_marginTop="@dimen/margin_space"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <com.familytraval.ui.BorderImageView
            android:id="@+id/product_pic_imgv"
            android:layout_width="60.0dip"
            android:layout_height="60.0dip"
            android:layout_marginTop="@dimen/margin_space_half"
            android:background="@color/white"
            android:paddingLeft="9.0dip"
            android:paddingRight="9.0dip"
            android:scaleType="fitCenter"
            android:src="@drawable/product_default" />

        <TextView
            android:id="@+id/product_name_txtv"
            style="@style/textStyle.Normal.black"
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:layout_marginLeft="@dimen/margin_space"
            android:layout_marginTop="@dimen/margin_space_half"
            android:layout_toRightOf="@id/product_pic_imgv"
            android:ellipsize="end"
            android:text="商品" />

        <TextView
            android:id="@+id/product_price_txtv"
            style="@style/textStyle.Normal.lightRed"
            android:layout_width="fill_parent"
            android:layout_height="20.0dip"
            android:layout_below="@id/product_name_txtv"
            android:layout_marginBottom="@dimen/margin_space_half"
            android:layout_marginLeft="@dimen/margin_space"
            android:layout_toRightOf="@id/product_pic_imgv"
            android:maxEms="6"
            android:maxLines="1"
            android:text="999" />

    </RelativeLayout>

    <View
        style="@style/separator_line"
        android:layout_below="@id/product_info_layout" />

    <ScrollView
        android:id="@+id/spec_scrollv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_info_layout"
        android:orientation="vertical"
        android:scrollbars="none">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/product_spec_lstv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="#00000000"
                android:fadingEdge="none"
                android:fastScrollEnabled="false"
                android:footerDividersEnabled="false"
                android:headerDividersEnabled="false"
                android:scrollbars="none"
                android:smoothScrollbar="true" />


            <LinearLayout
                android:id="@+id/product_spec_cart_layout"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/margin_space"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/product_spec_store_count_txtv"
                    style="@style/textStyle.Small.black"
                    android:layout_width="120dip"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:layout_marginLeft="@dimen/margin_space"
                    android:paddingLeft="@dimen/margin_space"
                    android:text="@string/count" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dip"
                    android:layout_marginRight="@dimen/margin_space"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/cart_minus_btn"
                        android:layout_width="26dip"
                        android:layout_height="26dip"
                        android:background="@drawable/cart_minus_selector" />

                    <EditText
                        android:id="@+id/cart_count_dtxtv"
                        style="@style/textStyle.Normal.black"
                        android:layout_width="40dip"
                        android:layout_height="26dip"
                        android:layout_toRightOf="@id/cart_minus_btn"
                        android:background="@drawable/icon_cart_count"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="center"
                        android:inputType="number"
                        android:text="1" />

                    <Button
                        android:id="@+id/cart_plus_btn"
                        android:layout_width="26dip"
                        android:layout_height="26dip"
                        android:layout_toRightOf="@id/cart_count_dtxtv"
                        android:background="@drawable/cart_plus_selector" />

                </RelativeLayout>
            </LinearLayout>
        </FrameLayout>


    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dip"
        android:layout_alignParentBottom="true"
        android:layout_weight="1.0"
        android:background="@color/black">

        <Button
            android:id="@+id/add_cart_btn"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_weight="1.0"
            android:background="@drawable/button_yellow_selector"
            android:text="@string/product_add_cart"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/buy_btn"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_weight="1.0"
            android:background="@drawable/button_selector"
            android:text="@string/product_buy_now"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>

